tests/NormalTests/paczka1/small_fuzzy/57787970.err
Error in line 1: TvI A518 4,9
Error in line 4: TvI A810 37,5
